<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.imagesviewer.ui.AlbumEditionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/title_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:drawableStart="@drawable/ic_search_black_24dp"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_images"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/b_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickMore"
                    android:text="@string/more"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/b_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickNext"
                    android:text="@string/next"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>